--- a/public/admin/assets/css/custom.css
+++ b/public/admin/assets/css/custom.css
@@ -5,3 +5,41 @@
 .ls-closed .bars:before {
     margin-top: 5px;
 }
+.breadcrumb-item.active {
+    color: #000;
+    font-weight: 700;
+}
+.breadcrumb-item {
+    font-size: 12px !important;
+}
+.block-header h2 {
+    font-weight: 700;
+    font-size: 24px;
+    margin-bottom: 5px !important;
+}
+.card .header h2 {
+    font-weight: 700 !important;
+    font-size: 18px !important;
+}
+
+input.form-control {
+    padding: 0 10px !important;
+}
+
+select.form-control {
+    border: 1px solid #ced4da !important;
+    border-radius: 4px;
+    padding: 0 10px;
+    cursor: pointer;
+}
+.badge {
+    padding: 8px 15px;
+    font-size: 12px;
+}
+.checkbox label,
+.radio label,
+label {
+    color: #000;
+    font-weight: 600;
+    margin-left: 5px;
+}
