--- a/public/frontend/assets/css/custom.css
+++ b/public/frontend/assets/css/custom.css
@@ -82,3 +82,35 @@ body {
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
 }
+
+ul.timeline {
+    list-style-type: none;
+    position: relative;
+}
+ul.timeline:before {
+    content: " ";
+    background: #d4d9df;
+    display: inline-block;
+    position: absolute;
+    left: 29px;
+    width: 2px;
+    height: 100%;
+    z-index: 400;
+}
+ul.timeline > li {
+    margin: 20px 0;
+    padding-left: 40px;
+    line-height: 1.6;
+}
+ul.timeline > li:before {
+    content: " ";
+    background: white;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    border: 3px solid #15a0df;
+    left: 20px;
+    width: 20px;
+    height: 20px;
+    z-index: 400;
+}
