--- a/public/admin/assets/css/custom.css
+++ b/public/admin/assets/css/custom.css
@@ -46,3 +46,65 @@ label {
 .sidebar .menu .list .ml-menu li.active a.toggled:not(.menu-toggle) {
     font-weight: 600 !important;
 }
+
+/* Style the list */
+.price {
+    list-style-type: none;
+    border: 1px solid #eee;
+    margin: 0;
+    padding: 0;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+}
+
+/* Add shadows on hover */
+.price:hover {
+    box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.175);
+}
+
+/* Pricing header */
+.price .free {
+    background-color: #111;
+    color: white;
+    font-size: 25px;
+    height: 93px;
+}
+
+.price .has-price {
+    background: linear-gradient(45deg, #67d1fe, #479ef5);
+    color: white;
+    font-size: 25px;
+    height: 93px;
+}
+
+/* List items */
+.price li {
+    border-bottom: 1px solid #eee;
+    padding: 20px;
+    text-align: center;
+}
+
+/* Grey list item */
+.price .grey {
+    background-color: #eee;
+    font-size: 20px;
+}
+
+/* The "Sign Up" button */
+.button {
+    background: linear-gradient(45deg, #67d1fe, #479ef5);
+    border: none;
+    color: white;
+    padding: 10px 25px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+/* Change the width of the three columns to 100%
+(to stack horizontally on small screens) */
+@media only screen and (max-width: 600px) {
+    .columns {
+        width: 100%;
+    }
+}
