--- a/public/frontend/assets/css/custom.css
+++ b/public/frontend/assets/css/custom.css
@@ -245,3 +245,70 @@ tfoot tr:last-child td:first-child {
 tfoot tr:last-child td:last-child {
     border-bottom-right-radius: 5px;
 }
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px; /* Giảm kích thước của switch */
+    height: 22px; /* Giảm chiều cao của switch */
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    border-radius: 22px; /* Đảm bảo slider có góc bo tròn */
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 18px; /* Giảm chiều cao của slider */
+    width: 18px; /* Giảm chiều rộng của slider */
+    left: 2px; /* Giảm khoảng cách bên trái */
+    bottom: 2px; /* Giảm khoảng cách bên dưới */
+    background-color: white;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    border-radius: 50%; /* Đảm bảo phần trượt có hình tròn */
+}
+
+input:checked + .slider {
+    background-color: #15a0df;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #15a0df;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(
+        18px
+    ); /* Cập nhật khoảng cách khi chuyển trạng thái */
+    -ms-transform: translateX(18px);
+    transform: translateX(18px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 22px; /* Đảm bảo slider có góc bo tròn */
+}
+
+.slider.round:before {
+    border-radius: 50%; /* Đảm bảo phần trượt có hình tròn */
+}
